[package]
name = "fateful"
version = "0.1.1"
edition = "2018"
authors = ["Sam Mobach <hello@sammobach.com>"]
description = "A tool to fatefully exit the process without panics"
repository = "https://github.com/nilpntr/fateful.rs"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
